# tinyrdf

./: .gitignore  README.md  pyproject.toml
tinyrdf/: interpretation.py  model.py  terms.py  values.py
